--- a/config.example.yaml
+++ b/config.example.yaml
@@ -10,7 +10,7 @@ FightTactics:e,0.2,q,r,a,0.1,a,0.1,a,0.1,a,0.1,a,0.1 # 战斗策略 三个角色
     - "e,0.2,q,r,a,0.1,a,0.1,a,0.1,a,0.1,a,0.1"
     - "e,0.2,q,r,a,0.1,a,0.1,a,0.1,a,0.1,a,0.1"
     - "e,0.2,q,r,a,0.1,a,0.1,a,0.1,a,0.1,a~"
-TargetBoss: 辉莹军势# 目标BOSS 必须保证目标BOSS的位置是有借位信标的，可以少字但是不能有错别字
+TargetBoss: 鸣钟之龟# 目标BOSS 必须保证目标BOSS的位置是有借位信标的，可以少字但是不能有错别字
     - "鸣钟之龟"
     - "燎照之骑"
     - "聚械机偶"
